scripts/SelfReportedLint.txt
SelfReported.Rmd:49:3: style: [commented_code_linter] Commented code should be removed.
# packages <- c("data.table","tidyverse","dplyr")
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
SelfReported.Rmd:50:3: style: [commented_code_linter] Commented code should be removed.
# package_install(packages)
  ^~~~~~~~~~~~~~~~~~~~~~~~~
SelfReported.Rmd:67:1: style: [object_name_linter] Variable and function name style should match snake_case or symbols.
MHQ2 <- fread(args[1], data.table = FALSE)
^~~~
SelfReported.Rmd:80:11: style: [spaces_left_parentheses_linter] Place a space before left parenthesis, except in a function call.
        if(all(is.na(selected_row))) {
          ^
SelfReported.Rmd:103:1: style: [object_name_linter] Variable and function name style should match snake_case or symbols.
MHQ2$SelfReportedDiagnosis <- grep_reports(
^~~~
SelfReported.Rmd:121:1: style: [object_name_linter] Variable and function name style should match snake_case or symbols.
MHQ2$SelfReportedDiagnosisMHQ2016Compatible <- grep_reports(
^~~~
SelfReported.Rmd:135:1: style: [object_name_linter] Variable and function name style should match snake_case or symbols.
MHQ2$SelfReportedAnxietyDisorder <- grep_reports(
^~~~
SelfReported.Rmd:148:1: style: [object_name_linter] Variable and function name style should match snake_case or symbols.
MHQ2$SelfReportedEatingDisorder <- grep_reports(
^~~~
SelfReported.Rmd:159:14: error: [error] unexpected symbol
~~TODO: This needs to be done as part of the overarching script as it relies on otuput from multiple modules~~
             ^
SelfReported.Rmd:159:81: style: [line_length_linter] Lines should not be more than 80 characters. This line is 110 characters.
~~TODO: This needs to be done as part of the overarching script as it relies on otuput from multiple modules~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
SelfReported.Rmd:160:1: style: [trailing_blank_lines_linter] Trailing blank lines are superfluous.

^
